<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/start"
                tools:context="com.myweb.autocall.AutoCallActivity"
                android:background="#0099cc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">
    <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:onClick="doClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
    </Button>
    <Button
            android:id="@+id/artificial_reception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artificial_reception"
            android:layout_above="@+id/start_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
    </Button>
    <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="18sp"
            android:maxLines="6"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/qiyong"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
    </EditText>
    <TextView
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="秒以上发送短信"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"
            android:layout_alignBaseline="@+id/time"
            android:layout_alignBottom="@+id/time"
            android:layout_toRightOf="@+id/time"
            android:layout_toEndOf="@+id/time">
    </TextView>
    <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:inputType="number"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"
            android:layout_alignBaseline="@+id/tonghuaText"
            android:layout_alignBottom="@+id/tonghuaText"
            android:layout_toRightOf="@+id/tonghuaText"
            android:layout_toEndOf="@+id/tonghuaText">
    </EditText>
    <TextView
            android:id="@+id/tonghuaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="通话"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"
            android:layout_alignBaseline="@+id/send_message"
            android:layout_alignBottom="@+id/send_message"
            android:layout_toRightOf="@+id/send_message"
            android:layout_toEndOf="@+id/send_message">
    </TextView>
    <CheckBox
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/qiyong"
            android:layout_alignBottom="@+id/qiyong"
            android:layout_toRightOf="@+id/qiyong"
            android:layout_toEndOf="@+id/qiyong"
            android:layout_marginLeft="11dp">
    </CheckBox>
    <TextView
            android:id="@+id/start_introducton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_introducton"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
    </TextView>
    <TextView
            android:id="@+id/start_info"
            android:text="@string/start_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/artificial_reception"/>
    <TextView
            android:id="@+id/qiyong"
            android:text="启用"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_introducton"
            android:textSize="18sp"
            android:layout_marginTop="10sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
</RelativeLayout>
